Dropwizard 2.1.10 migration